--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,3 +113,25 @@ a {
   font-size: 2.5em;
   text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
 }
+
+/* media query depends on browser's direction */
+@media all and (orientation: landscape) {
+  .main__content {
+    flex-direction: row;
+    overflow: hidden;
+  }
+
+  .thumbnail__list {
+    flex-direction: column;
+    order: 0;
+    margin-left: 20px;
+  }
+
+  .thumbnail__item {
+    max-width: 260px;
+  }
+
+  .thumbnail__item.thumbnail__item {
+    margin-top: 20px;
+  }
+}
